# Image-analyis-ai

./: .gitignore
Backend/: README.md  main.py  pyproject.toml  requirements.txt  test.py
Backend/app/: crew.py  http_endpoints.py  main.py  socket_events.py
Backend/app/config/: agents.yaml  tasks.yaml  tools.yaml
Backend/app/config/data/: lenses.json
Backend/app/store/: session_store.py
Backend/app/tools/: __init__.py  base_tool.py  comparison_tool.py  context_chain_builder.py  csv_export_tool.py  datetime_calculator.py  distance_calculator.py  duplicate_detection_tool.py  error_classifier.py  exif_decoder.py  extraction_tool.py  filter_and_stats_tool.py  format_normalizer.py  hash_generator.py  landmark_matcher.py  lens_database.py  matrix_comparator.py  metadata_cache_tool.py  metadata_validator.py  named_place_enrichment_tool.py  noise_analyzer.py  prompt_enrichment_tool.py  reverse_geocoder.py  reverse_geocoding_tool.py  sequence_detector.py  session_retrieval_tool.py  solar_position_analyzer.py  suggestion_generator.py  visualization_creator.py  weather_api_client_tool.py  weather_data_tool.py
Backend/src/image_metadata_conversational_assistant/: crew.py  main.py
Backend/src/image_metadata_conversational_assistant/config/: tasks.yaml
Backend/src/image_metadata_conversational_assistant/store/: session_store.py
Backend/src/image_metadata_conversational_assistant/tools/: __init__.py  comparison_tool.py  csv_export_tool.py  duplicate_detection_tool.py  extraction_tool.py  filter_and_stats_tool.py  metadata_cache_tool.py  named_place_enrichment_tool.py  (+3 more)
(+13 files in other folders)
