[project]
name = "image_metadata_conversational_assistant"
version = "0.1.0"
description = "image_metadata_conversational_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
image_metadata_conversational_assistant = "image_metadata_conversational_assistant.main:run"
run_crew = "image_metadata_conversational_assistant.main:run"
train = "image_metadata_conversational_assistant.main:train"
replay = "image_metadata_conversational_assistant.main:replay"
test = "image_metadata_conversational_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
