[project]
name = "image_metadata_conversational_assistant_backend"
version = "0.1.0"
description = "Conversational image metadata assistant backend using CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
image_metadata_conversational_assistant = "app.main:run"
run_crew = "app.main:run"
train = "app.main:train"
replay = "app.main:replay"
test = "app.main:test"
backend = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
